fix for company cards on Firefox

--- a/companies/companies.less
+++ b/companies/companies.less
@@ -75,6 +75,8 @@
 
     .company.card {
         
+        .Gecko & { display: block !important; }
+        
         .company-details {
             display: none;
         }
